[package]
name = "rust_http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", features = ["blocking", "multipart", "json"] }
http = "0.2.7"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"